asm-common-aarch64: add MacOS support for GET_DATA_POINTER

* cipher/asm-common-aarch64.h [__APPLE__] (GET_DATA_POINTER): Add MacOS
variant of macro.
--

GnuPG-bug-id: 5157
Signed-off-by: Jussi Kivilinna <jussi.kivilinna@iki.fi>